--- a/halamanawal.html
+++ b/halamanawal.html
@@ -36,7 +36,7 @@
     <div class="col">Meja</div><span class="border border-secondary"></span>
     <div class="col">Kursi</div><span class="border border-secondary"></span>
     <div class="col">Sedotan Stainless</div><span class="border border-secondary"></span>
-    <div class="col">Peralatan Dapur</div>
+    <div class="col">Peralatan Dapur dapur</div>
   </div>
 </div>
 </form>
